feat(update-project): Adding a ui to the project.
Added 3 images built with AI.
Added html tags and css to build the ui page.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Rock Paper Scissors</h1>
+    <h2>Creature mode!</h2>
+    <p>Play five rounds against the computer.</p>
+  </header>
+  <main>
+    <div class="container">
+      <h3>You: 0</h3>
+      <h3>Computer: 0</h3>
+    </div>
+    <div class="container-btn">
+      <button>
+        <img src="img/rock-creature.png" alt="Rock choice. Rock creature">
+      </button>
+      <button>
+        <img src="img/paper-creature.png" alt="Paper choice. Paper creature">
+      </button>
+      <button>
+        <img src="img/scissors-creature.png" alt="Scissors choice. Scissors creature">
+      </button>
+    </div>
+  </main>
 </body>
 </html>
